@@ -1,3 +1,5 @@
+- fix timezone dir install prefix prepending (broken symlink during installer mga#14888)
+
 Version 16.56 - 10 February 2015
 
 - service_harddrake:
